k8s/k8s-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  webook-redis
  namespace: default
  labels:
    app:  webook-redis
spec:
  selector:
    matchLabels:
      app: webook-redis
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  webook-redis
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  webook-redis
        image:  redis:latest
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 1
            memory: 1Gi
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        
        ports:
        - containerPort:  6379
          name:  webook-redis
      restartPolicy: Always
