k8s/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webook
  # 描述pod是什么样的
  template:
    metadata:
      name: webook
      labels:
        app: webook
    spec:
      containers:
        - name: webook
          image: gz4z2b/webook:v0.0.1
          ports:
            - containerPort: 8080
