k8s/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
  namespace: default
spec:
  selector:
    app: webook-mysql
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: webook-mysql
    protocol: TCP
    port: 11309
    targetPort: 3306
    nodePort: 30001
