k8s/k8s-ingress-nginx.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: webook.gdtengnan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webook
            port:
              number: 81
